2001-09-19  Frank Belew  <frb@ximian.com>

	* configure.in: remove AM_CONDITIONAL that has no effect

2001-09-18  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am (EXTRA_DIST): Add COPYING.LIB

	* COPYING.LIB: Add this file.

Sun Sep 09 16:54:21 2001  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* libgnome/gnome-init.c, libgnome/gnome-program.c: Added some
	  documentation

Sun Sep 09 00:16:03 2001  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* Makefile.am, doc/Makefile.am, configure.in: Add build
	  infrastructure for documentation.

Mon Sep 03 17:27:04 2001  George Lebl <jirka@5z.com>

	* configure.in: raise version to 1.103.0

2001-09-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgnome/gnome-i18n.h: removed #define's for gettext macros, and
	include bonobo/bonobo-i18n.h, which includes them

2001-09-02  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am: Don't build tests/
	
	* configure.in: Don't build tests, remove bonobo-config dependency.
	
	* idl/ChangeLog: Remove.
	
	* idl/Gnome.idl: Remove.
	
	* idl/Makefile.am: Remove.

Sat Sep 01 23:05:23 2001  George Lebl <jirka@5z.com>

	* configure.in, acconfig.h: Add some HAVE_ defines, and again
	  look for esd and audiofile

Sun Aug 26 18:39:43 2001  George Lebl <jirka@5z.com>

	* libgnome/configure.in, libgnome/libgnome-2.0.pc.in:  Require GConf

Fri Aug 24 09:59:14 2001  George Lebl <jirka@5z.com>

	* acconfig.h, configure.in, libgnome/gnome-utils.[ch]:  Add portable
	  setenv, unsetenv, clearenv implementations since they still didn't
	  get into glib.  If they get there these can be easily replaced
	  by macros or just punted.  They are simple yet very useful to
	  have to write portable code

	* libgnome/gnome-utils.c:  make gnome_is_program_in_path use 'access'
	  with X_OK to check only for actually executable files and it also
	  regets the PATH every time so that it follows the current PATH
	  setting.  Note that this cannot possibly be the bottleneck in this
	  function and the "access" is.