@@ -1,3 +1,7 @@
+2001-09-21  Havoc Pennington  <hp@redhat.com>
+
+	* autogen.sh: remove CERTIFIED_GNOMIE
+
 2001-09-19  Frank Belew  <frb@ximian.com>
 
 	* configure.in: remove AM_CONDITIONAL that has no effect
